--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"vite-plugin-svgr": "^3.2.0"
 	},
 	"dependencies": {
+		"express": "^4.18.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"styled-components": "^6.0.7"
