--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
+		"@types/express": "^4.17.17",
 		"@types/jest": "^29.5.4",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
