--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
 	"name": "reactjs-boilerplate",
 	"version": "1.0.0",
 	"description": "React js boilerplate",
-	"main": "src/index.js",
+	"type": "module",
 	"scripts": {
-		"start": "vite",
+		"start": "ts-node-esm ./src/Server/index.ts",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"lint:check": "eslint src/**/*.{ts,tsx,json} {jest.config,jest.setup}.ts",
