chore: Build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"type": "module",
 	"scripts": {
 		"start": "ts-node-esm ./src/Server/index.ts",
-		"build": "tsc && vite build",
+		"build:server": "tsc && vite build --outDir dist/server --ssr ./src/Client/EntryServer.tsx",
+		"build:client": "tsc && vite build --outDir dist/client",
+		"build": "npm run build:server && npm run build:client",
 		"preview": "vite preview",
 		"lint:check": "eslint src/**/*.{ts,tsx,json} {jest.config,jest.setup}.ts",
 		"lint:fix": "eslint --fix src/**/*.{ts,tsx,json} {jest.config,jest.setup}.ts",
