--- a/.prettierrc
+++ b/.prettierrc
@@ -26,5 +26,7 @@
 		"^[./]"
 	],
 	"importOrderSeparation": true,
-	"importOrderSortSpecifiers": true
+	"importOrderSortSpecifiers": true,
+
+	"plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
