chore: Fix prettier index html location

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"preview": "vite preview",
 		"lint:check": "eslint src/**/*.{ts,tsx,json} {jest.config,jest.setup}.ts",
 		"lint:fix": "eslint --fix src/**/*.{ts,tsx,json} {jest.config,jest.setup}.ts",
-		"prettier:fix": "prettier -w \"src/**/*.{ts,tsx,json,md}\" \"*.md\" \"{jest.config,jest.setup}.ts\" \"index.html\"",
-		"prettier:check": "prettier -c \"src/**/*.{ts,tsx,json,md}\" \"*.md\" \"{jest.config,jest.setup}.ts\" \"index.html\"",
+		"prettier:fix": "prettier -w \"src/**/*.{ts,tsx,json,md,html}\" \"*.md\" \"{jest.config,jest.setup}.ts\"",
+		"prettier:check": "prettier -c \"src/**/*.{ts,tsx,json,md,html}\" \"*.md\" \"{jest.config,jest.setup}.ts\"",
 		"clean": "rimraf build",
 		"test": "jest --passWithNoTests",
 		"test:watch": "jest --watch --passWithNoTests",
