--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
 		"build:client": "tsc && vite build --outDir dist/client",
 		"build": "npm run build:server && npm run build:client",
 		"preview": "vite preview",
-		"lint:check": "eslint src/**/*.{ts,tsx,json} {jest.config,jest.setup}.ts",
-		"lint:fix": "eslint --fix src/**/*.{ts,tsx,json} {jest.config,jest.setup}.ts",
-		"prettier:fix": "prettier -w \"src/**/*.{ts,tsx,json,md,html}\" \"*.md\" \"{jest.config,jest.setup}.ts\"",
-		"prettier:check": "prettier -c \"src/**/*.{ts,tsx,json,md,html}\" \"*.md\" \"{jest.config,jest.setup}.ts\"",
+		"lint:check": "eslint src/**/*.{ts,tsx,json}",
+		"lint:fix": "eslint --fix src/**/*.{ts,tsx,json}",
+		"prettier:fix": "prettier -w \"src/**/*.{ts,tsx,json,md,html}\" \"*.md\"",
+		"prettier:check": "prettier -c \"src/**/*.{ts,tsx,json,md,html}\" \"*.md\"",
 		"clean": "rimraf build",
-		"test": "jest --passWithNoTests",
-		"test:watch": "jest --watch --passWithNoTests",
-		"test:watch:all": "jest --watchAll --passWithNoTests",
-		"test:coverage": "jest --coverage --passWithNoTests",
-		"test:changed": "jest -o --passWithNoTests",
+		"test": "echo \"No Test\"",
+		"test:watch": "echo \"No Test\"",
+		"test:watch:all": "echo \"No Test\"",
+		"test:coverage": "echo \"No Test\"",
+		"test:changed": "echo \"No Test\"",
 		"pre-commit": "lint-staged --quiet",
 		"pre-push": "npm run test",
 		"prepare": "husky install"
@@ -40,29 +40,18 @@
 	},
 	"homepage": "https://github.com/kennarddh/reactjs-boilerplate#readme",
 	"devDependencies": {
-		"@babel/core": "^7.22.15",
-		"@babel/preset-env": "^7.22.15",
-		"@babel/preset-react": "^7.22.15",
-		"@babel/preset-typescript": "^7.22.15",
-		"@testing-library/jest-dom": "^6.1.3",
-		"@testing-library/react": "^14.0.0",
-		"@testing-library/user-event": "^14.4.3",
 		"@trivago/prettier-plugin-sort-imports": "^4.2.0",
 		"@types/express": "^4.17.17",
-		"@types/jest": "^29.5.4",
 		"@types/react": "^18.2.21",
 		"@types/react-dom": "^18.2.7",
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
 		"@vitejs/plugin-react": "^4.0.4",
-		"babel-plugin-module-resolver": "^5.0.0",
-		"babel-plugin-styled-components": "^2.1.4",
 		"eslint": "^8.48.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-import-resolver-alias": "^1.1.2",
 		"eslint-import-resolver-typescript": "^3.6.0",
 		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-jest": "^27.2.3",
 		"eslint-plugin-json": "^3.1.0",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-prettier": "^5.0.0",
@@ -70,9 +59,6 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-security": "^1.7.1",
 		"husky": "^8.0.3",
-		"jest": "^29.6.4",
-		"jest-environment-jsdom": "^29.6.4",
-		"jest-styled-components": "^7.1.1",
 		"lint-staged": "^14.0.1",
 		"prettier": "^3.0.3",
 		"rimraf": "^5.0.1",
