--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -5,11 +5,5 @@
 		"moduleResolution": "Node",
 		"allowSyntheticDefaultImports": true
 	},
-	"include": [
-		"vite.config.ts",
-		"babel.config.js",
-		".eslintrc.js",
-		"jest.config.ts",
-		"jest.setup.ts"
-	]
+	"include": ["vite.config.ts", ".eslintrc.cjs"]
 }
