--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"start": "ts-node-esm ./src/Server/index.ts",
+		"prod": "ts-node-esm ./src/Server/prod.ts",
 		"build:server": "tsc && vite build --outDir build/server --ssr ./src/Client/EntryServer.tsx",
 		"build:client": "tsc && vite build --outDir build/client",
 		"build": "npm run build:server && npm run build:client",
