--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "React js boilerplate",
 	"type": "module",
 	"scripts": {
-		"start": "ts-node-esm ./src/Server/index.ts",
-		"prod": "ts-node-esm ./src/Server/prod.ts",
+		"start": "ts-node-esm ./src/Server/development.ts",
+		"start:prod": "ts-node-esm ./src/Server/production.ts",
 		"build:server": "tsc && vite build --outDir build/server --ssr ./src/Client/EntryServer.tsx",
 		"build:client": "tsc && vite build --outDir build/client",
 		"build": "npm run build:server && npm run build:client",
